--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,9 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
-      - "8432:5432"
+      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    networks:
-      - my_network
 
   app:
     build:
@@ -21,20 +19,21 @@ services:
       dockerfile: Dockerfile
     container_name: spring_app
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:8432/postgres
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
+      SERVER_PORT: 8080
     ports:
-      - "8084:8084"
+      - "8080:8080"
     depends_on:
       - db
-    networks:
-      - my_network
+      - nginx
 
-
-networks:
-  my_network:
-      driver: bridge
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    ports:
+      - "80:80"  # Открываем порт для внешних подключений
+    volumes:
+      - ./nginx.conf:/etc/nginx.conf  # Подключаем конфигурацию Nginx
 
 volumes:
   db_data:
